# rust-yew-frontend01

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
public/: index.html  index.js
src/: app.rs  lib.rs
