[package]
name = "yew-frontend01"
version = "0.1.0"
authors = ["Ajinkya <ajinkyab1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = "0.16.2"
